examples/test/testpolicy19416.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19416
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key12: value11
      key22: value46
      key40: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value10
      podSelector:
        matchLabels:
          key13: value45
          key49: value46
          key17: value33
